Added Piano example, design updates to synth

--- a/spacebrew_synth/index.html
+++ b/spacebrew_synth/index.html
@@ -19,18 +19,24 @@
 	<div id="row">
 		<div id="synthOne" class="synth">
 			<div id="displayOne" class="display"></div>
-			<div class="text"><strong>Route:</strong> synthOne</div>
-			<div class="text range"><strong>Type:</strong> range</div>
+			<div class="text">
+				<strong>Route:</strong> synthOne<br/>
+				<strong>Type:</strong> range
+			</div>
 		</div>
 		<div id="synthTwo" class="synth">
 			<div id="displayTwo" class="display"></div>
-			<div class="text"><strong>Route:</strong> synthTwo</div>
-			<div class="text range"><strong>Type:</strong> range</div>
+			<div class="text">
+				<strong>Route:</strong> synthTwo<br />
+				<strong>Type:</strong> range
+			</div>
 		</div>
 		<div id="synthThree" class="synth">
 			<div id="displayThree" class="display"></div>
-			<div class="text"><strong>Route:</strong> synthThree</div>
-			<div class="text range"><strong>Type:</strong> range</div>
+			<div class="text">
+				<strong>Route:</strong> synthThree<br />
+				<strong>Type:</strong> range
+			</div>
 		</div>
 	</div>
 </body>
