Fixed new audio examples for mobile

--- a/spacebrew_piano/index.html
+++ b/spacebrew_piano/index.html
@@ -30,5 +30,6 @@
 		<div id="a#" class="note sharp"></div>
 		<div id="b" class="note"></div>
 	</div>
+	<div id="mobileStart">Touch to start</div>
 </body>
 </html>
