Added link to gh hosted library

--- a/index.html
+++ b/index.html
@@ -14,10 +14,20 @@
 		.pad {
 			padding: 5px;
 		}
+		.para {
+			width:50%; min-width: 400px; max-width: 600px;
+			padding:5px;
+		}
 	</style>
 	<body>
 		<h1>Spacebrew Examples</h1>
-		<div style="width:50%; min-width: 400px; max-width: 600px">
+		<div class="para">
+			Hosted library links:<br/>
+			<a href="library/sb-1.4.1.js">Library: sp-1.4.1.js</a>
+			<a href="library/sb-1.4.1.min.js">Minified: sb-1.4.1.min.js</a>
+			<a href="library/sb-admin-0.1.4.js">Admin mix-in: sb-admin-0.1.4.js</a>
+		</div>
+		<div class="para">
 			Please remember to give your client a unique name. You can click one of the following links and add your unique name after the "name=" in the query string and press enter to re-load the page with your unique name.
 		</div>
 		<div id="ex_b">
