local links now actually connect locally

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					parent.appendChild(div);
 					div.className = "pad";
 					div.innerHTML = "<strong>Example: " + n +"</strong>";
-					div.appendChild( createLink(n, "local") );
+					div.appendChild( createLink(n, "local", "localhost") );
 					div.appendChild( createLink(n, "cloud", "sandbox.spacebrew.cc") );
 
 					if ( alt ){
